Fixed Equip Toggle Visibility

--- a/src/styles/actor/character/_inventory.scss
+++ b/src/styles/actor/character/_inventory.scss
@@ -195,8 +195,11 @@
             margin-right: 4px;
             color: rgba(black, 0.75);
 
-            &.active {
-                color: var(--primary);
+            &.item-toggle-equip {
+                color: rgba(black, 0.4);
+                &.active {
+                    color: var(--secondary);
+                }
             }
         }
     }
